<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_your_field"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:text="@string/capture_from_camera"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:text="@string/upload_from_gallery"
        android:textSize="18sp"/>

</LinearLayout>
